# data-quality

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: CI.yml
app/: function.py
tests/: test_function_hello.py
